x1168 (RT#798250) Make work number compulsory in block registration